fixed white space above

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -15,6 +15,7 @@ header{
 #course{
     color: #fff;
 }
+
 .box{
     background-color:#000;
     text-align: center;
@@ -47,7 +48,7 @@ header{
 .container{
 color: #fff;
 font-family: Josefin Sans,sans-serif;
-margin-top: 5%;
+/* margin-top: 5%; */
 }
 
 .container .mid-text{
@@ -66,7 +67,7 @@ hr{
     margin-top: 30px;
     font-size: 1.90rem;
     /* float: left; */
-    color: #de4de0;
+     color: #de4de0;
     font-style: italic;
 }
 
